# fakeout

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.github/workflows/: playwright.yml
code/: response_2.json
code/describe-and-generate/: .env.example  .gitignore  README.md  build-lambda.sh  main.py  pyproject.toml  run_generation.py  test_local.py  test_local_r2.py  test_local_supabase.py
code/describe-and-generate/clients/: google_ai.py  openai_vision.py  r2.py  storage_factory.py  supabase_storage.py
code/e2e/: package.json  playwright.config.ts
code/e2e/tests/: seed.spec.ts
code/e2e/tests/game/: game-display.spec.ts  game-selection.spec.ts
code/frontend/: .env.example  README-R2-INTEGRATION.md  SSR_SSG_EVALUATION.md  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.mts
code/frontend/public/: robots.txt  site.webmanifest  sitemap.xml
code/frontend/src/: App.vue  components.d.ts  i18n.ts  main.ts  typed-router.d.ts
code/frontend/src/assets/: tailwind.css
code/frontend/src/components/: AppFooter.vue  LanguageSwitcher.vue  MissionHero.vue  NewsletterSignup.vue  StructuredData.vue
code/frontend/src/types/: game.ts  (+2 more)
code/notify-users/: build-lambda.sh  main.py  pyproject.toml
code/scraper/: .env  .gitignore  build-lambda.sh  index.js  package.json  pnpm-lock.yaml  scrape.js  test-lambda.js
code/scraper/clients/: pexel.js  s3.js  storage.js  supabase-storage.js  supabase.js
code/terraform/: automation-reddit.tf  automation.tf  main.tf  notifications.tf  terraform.tfvars.example  variables.tf
(+48 files in other folders)
